# fungAI

./: .gitignore  ARCHITECTURE.md  FEATURE_MATRIX.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
aegis_core/: __init__.py  budget.py  checkpoints.py  cli.py  loop.py  middleware.py  self_improvement.py  state.py
aegis_core/context/: __init__.py  branch_tree.py  engine.py  quarantine.py  tiered_compression.py
aegis_core/integrations/: __init__.py  acp_client.py  mcp_client.py
aegis_core/memory/: __init__.py  backend.py  composite_backend.py  filesystem_backend.py  sqlite_backend.py  state_backend.py
aegis_core/permissions/: __init__.py  approval.py  redaction.py
aegis_core/persistence/: __init__.py  session_store.py
aegis_core/prompts/: __init__.py  builder.py  model_guidance.py  skills.py
aegis_core/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
aegis_core/subagents/: __init__.py  cache_sharing.py  delegate.py  moa.py  orchestrator.py  swarm.py
aegis_gateway/: __init__.py  client.py  protocol.py  server.py
aegis_sentinel/: __init__.py  audit.py  orchestrator.py  personas.py
docs/: architecture.html
examples/: acp_client_demo.py  acp_demo_agent.py  gateway_demo.py  mcp_client_demo.py  mcp_demo_server.py  minimal_agent.py  soc_triage_demo.py
tests/: test_checkpoints.py  test_context.py  test_core_loop.py  test_memory.py  test_permissions.py  test_redaction.py  test_sentinel_data_security.py  test_sentinel_redteam.py  test_sentinel_soc.py  test_sentinel_vuln_live.py  test_subagents.py  test_tools.py
(+21 files in other folders)
